# the-math-guys-bot

./: .gitignore  Makefile  README.md  amctrivial_problems.py  channels.json  hola.html  main.py  math.html  math.md  md2html.js  md2image.js  md2images.js  nixpacks.toml  package-lock.json  package.json  pyproject.toml
.github/: FUNDING.yml
the_math_guys_bot/: bounties_db.py  handle_message.py  message_history.py  plot.py  random_problem_set.py  retrieve_youtube.py  stt.py  tts.py
the_math_guys_bot/premium/: intelligent_response.py
