[tool.poetry]
name = "the-math-guys-bot"
version = "0.1.0"
description = ""
authors = ["MathItYT <benjamin.ubilla@uc.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
python-dotenv = "^1.0.0"
py-cord = {git = "https://github.com/Pycord-Development/pycord.git", branch="master"}
langchain = "^0.2.14"
langchain-community = "^0.2.12"
langchain-openai = "^0.1.23"
langchain-core = "^0.2.35"
python-youtube = "^0.9.5"
antlr4-python3-runtime = "==4.11"
sympy = "^1.13.2"


[tool.poetry.group.dev.dependencies]
selenium = "^4.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
