[tool.poetry]
name = "the-math-guys-bot"
version = "0.1.0"
description = ""
authors = ["MathItYT <benjamin.ubilla@uc.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
python-dotenv = "^1.0.0"
py-cord = {git = "https://github.com/Pycord-Development/pycord.git", branch="master"}
openai = "^1.43.0"
pillow = "^10.4.0"
manim = "^0.18.1"
requests = "^2.32.3"
google-api-python-client = "^2.145.0"
html2text = "^2024.2.26"
absl-py = "^2.1.0"
mpmath = "^1.3.0"
sympy = "^1.13.3"
markdown-it-py = {extras = ["plugins"], version = "^3.0.0"}
pyhtml2pdf = "^0.0.7"
pymupdf = "^1.24.11"


[tool.poetry.group.dev.dependencies]
selenium = "^4.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
